--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
     
         <div class="certificate">
             <p><strong>Curso de Diseño para Developers</strong> - Platzi, 2021</p>
-            <img src="public/diploma-diseno-programadores.jpg" alt="Certificado de Curso de Desarrollo Web Fullstack" class="cert-image">
+            <img src="/public/diploma-diseno-programadores.jpg" alt="Certificado de Curso de Desarrollo Web Fullstack" class="cert-image">
         </div>
     
         <div class="certificate">
             <p><strong>Curso Profesional de Git y GitHub</strong> - Platzi, 2021</p>
-            <img src="public/diploma-git-github.jpg" alt="Certificado de Curso de Desarrollo Web Fullstack" class="cert-image">
+            <img src="./public/diploma-git-github.jpg" alt="Certificado de Curso de Desarrollo Web Fullstack" class="cert-image">
         </div>
         <div class="certificate">
           <p><strong>Frontend Developer</strong> - Platzi, 2021</p>
