--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         
             <div class="certificate">
                 <p><strong>Fundamentos de Ingeniería de Software</strong> - Platzi, 2020</p>
-                <img src="Hoja_de_vida_2/public/diploma-ingenieria.jpg" alt="Certificado de Curso de Desarrollo Web Fullstack" class="cert-image">
+                <img src="/public/diploma-ingenieria.jpg" alt="Certificado de Curso de Desarrollo Web Fullstack" class="cert-image">
             </div>
     
         <div class="certificate">
@@ -91,7 +91,7 @@
         </div>
         <div class="certificate">
           <p><strong>Frontend Developer</strong> - Platzi, 2021</p>
-          <img src="/public/diploma-frontend-developer.jpg" alt="Certificado de Curso de Desarrollo Web Fullstack" class="cert-image">
+          <img src="../public/diploma-frontend-developer.jpg" alt="Certificado de Curso de Desarrollo Web Fullstack" class="cert-image">
     </div>
       <div class="certificate">
         <p><strong>Responsive Design: Maquetación Mobile First</strong> - Platzi, 2021</p>
