--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <!-- Autoaprendizaje y Certificaciones -->
       <section class="education">
-        <h2>Autoaprendizaje y Certificaciones</h2>
+        <h2>Educación</h2>
         
             <div class="certificate">
                 <p><strong> 5 años de Derecho </strong> - Universidad Libre, 2014-2020</p>
