--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
             <div class="certificate">
                 <p><strong> 5 años de Derecho </strong> - Universidad Libre, 2014-2020</p>
-                <iframe src="public/GUERRERO.pdf" width="50%" height="600px"></iframe>
+                <iframe src="public/GUERRERO.pdf" width="50%" height="auto"></iframe>
             </div>
 
         <h2>Autoaprendizaje y Certificaciones</h2>
